IGNITE-19806 Port of new log storage from "sofa-jraft"
Signed-off-by: ibessonov <bessonov.ip@gmail.com>