@@ -19,6 +19,7 @@
 //This need for resolving plugins in buildscripts
 plugins {
     id('idea')
+    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.7'
     alias(libs.plugins.javacc) apply false
     alias(libs.plugins.modernizer) apply false
     alias(libs.plugins.aggregateJavadoc)
@@ -85,6 +86,7 @@ allprojects {
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
+        options.compilerArgs << "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
     }
 
     //Temporary hack to disable caching of Test tasks.
@@ -122,4 +124,13 @@ subprojects {
     }
 
     tasks.register('printSubDependencies', DependencyReportTask)
+}
+
+idea.project.settings {
+    compiler {
+        javac {
+            //TODO: Workaround on https://youtrack.jetbrains.com/issue/IDEA-154038
+            javacAdditionalOptions "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+        }
+    }
 }
